hot-fix hide scrollbar

--- a/css/home.css
+++ b/css/home.css
@@ -4,6 +4,9 @@
 
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
 
 body {
     background-color: #F4EAEA;
